--- a/src/dotnet-check/dotnet-check/appsettings.json
+++ b/src/dotnet-check/dotnet-check/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DotnetCheckContext": "Server=(localdb)\\mssqllocaldb;Database=dotnet_check.Data;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "dotnet_checkContext": "Server=(localdb)\\mssqllocaldb;Database=dotnet_check.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ApiBaseUrl": "https://localhost:7158"
 }
