--- a/src/dotnet-check/dotnet-check/appsettings.json
+++ b/src/dotnet-check/dotnet-check/appsettings.json
@@ -10,5 +10,7 @@
     "DotnetCheckContext": "Server=(localdb)\\mssqllocaldb;Database=dotnet_check.Data;Trusted_Connection=True;MultipleActiveResultSets=true",
     "dotnet_checkContext": "Server=(localdb)\\mssqllocaldb;Database=dotnet_check.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "ApiBaseUrl": "https://localhost:7158"
+  "ApiOptions": {
+    "BaseUrl": "https://localhost:7158"
+  }
 }
