--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,3 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v3
+  
+  comment:
+    if: ${{ github.event.pull_request.user.login == 'dependabot' }}
+    env:
+      PR_AUTHOR: ${{ github.event.pull_request.user.login }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '👋 Thanks for reporting!'
+            })
