--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,12 +13,13 @@ jobs:
         - uses: actions/checkout@v3
   
   comment:
-    if: ${{ github.event.pull_request.user.login == 'dependabot' }}
     env:
       PR_AUTHOR: ${{ github.event.pull_request.user.login }}
     runs-on: ubuntu-latest
     steps:
+      - run: 'echo {{ env.PR_AUTHOR }} comment'
       - uses: actions/github-script@v6
+        if: ${{ github.event.pull_request.user.login == 'dependabot' }}
         with:
           script: |
             github.rest.issues.createComment({
