--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,12 +13,13 @@ jobs:
         - uses: actions/checkout@v3
   
   comment:
-    if: ${{ github.event.pull_request.user.login == 'dependabot' }}
     env:
       PR_AUTHOR: ${{ github.event.pull_request.user.login }}
     runs-on: ubuntu-latest
     steps:
+      - run: echo "PR author $PR_AUTHOR"
       - uses: actions/github-script@v6
+        if: ${{ github.event.pull_request.user.login == 'dependabot' }}
         with:
           script: |
             github.rest.issues.createComment({
@@ -27,3 +28,8 @@ jobs:
               repo: context.repo.repo,
               body: '👋 Thanks for reporting!'
             })
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Echo PR author
+      run: echo "The author of this PR is ${{ github.event.pull_request.user.login }}"
