--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,6 +20,6 @@ updates:
 
   # Maintain dependencies for nuget
   - package-ecosystem: "nuget"
-    directory: "/"
+    directory: "/src/dotnet-check"
     schedule:
       interval: "daily"
