--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v3
+
+  dotnet-build:
+    runs-on: ubuntu-latest
+    steps:
+      - run: dotnet build src/dotnet-check
   
   comment:
     env:
@@ -26,7 +31,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks for reporting!'
+              body: '@dependabot squast and merg'
             })
   build:
     runs-on: ubuntu-latest
