--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -31,7 +31,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '@dependabot squast and merg'
+              body: '@dependabot squash and merge'
             })
   build:
     runs-on: ubuntu-latest
