--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,6 +15,8 @@ jobs:
   dotnet-build:
     runs-on: ubuntu-latest
     steps:
+      - run: ls
+      - run: echo $GITHUB_WORKSPACE
       - run: dotnet build ./src/dotnet-check/dotnet-check/dotnet-check.csproj
   comment:
     env:
